--- a/.classpath
+++ b/.classpath
@@ -6,6 +6,6 @@
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="C:/Program Files (x86)/jsoup-1.18.3.jar"/>
+	<classpathentry kind="lib" path="C:/Users/abdtr/Downloads/jsoup-1.18.3.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
