--- a/.classpath
+++ b/.classpath
@@ -9,5 +9,14 @@
 	<classpathentry kind="lib" path="C:/Program Files (x86)/jsoup-1.18.3.jar"/>
 	<classpathentry kind="lib" path="C:/Program Files (x86)/apache-opennlp-2.5.1/lib/opennlp-tools-2.5.1.jar"/>
 	<classpathentry kind="lib" path="C:/Program Files (x86)/Weka/weka.jar"/>
+	<classpathentry kind="lib" path="C:/Program Files (x86)/javafx-sdk-23.0.1/lib/javafx.base.jar"/>
+	<classpathentry kind="lib" path="C:/Program Files (x86)/javafx-sdk-23.0.1/lib/javafx.controls.jar"/>
+	<classpathentry kind="lib" path="C:/Program Files (x86)/javafx-sdk-23.0.1/lib/javafx.fxml.jar"/>
+	<classpathentry kind="lib" path="C:/Program Files (x86)/javafx-sdk-23.0.1/lib/javafx.graphics.jar"/>
+	<classpathentry kind="lib" path="C:/Program Files (x86)/javafx-sdk-23.0.1/lib/javafx.media.jar"/>
+	<classpathentry kind="lib" path="C:/Program Files (x86)/javafx-sdk-23.0.1/lib/javafx.swing.jar"/>
+	<classpathentry kind="lib" path="C:/Program Files (x86)/javafx-sdk-23.0.1/lib/javafx.web.jar"/>
+	<classpathentry kind="lib" path="C:/Program Files (x86)/javafx-sdk-23.0.1/lib/javafx-swt.jar"/>
+	<classpathentry kind="lib" path="C:/Users/boubk/Downloads/Programs/mysql-connector-j-8.0.31.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
